pdf files; edits

--- a/quarto/_pdf_index.qmd
+++ b/quarto/_pdf_index.qmd
@@ -1,9 +1,21 @@
-# Preface {.unnumbered}
+---
+title:  Calculus with Julia
+date: today
+jupyter: julia-1.11
+execute:
+  daemon: false
+format:
+  typst:
+    toc: false
+    section-numbering: "1."
+    keep-typ: false
+    include-before-body:
+      - text: |
+        #set figure(placement: auto)
+---
 
 
-![Calculus with Julia](misc/logo.png)
-
-----
+[![](misc/logo.png){}](https://calculuswithjulia.github.io/)
 
 This is a set of notes for learning
 [calculus](http://en.wikipedia.org/wiki/Calculus) using the
@@ -54,43 +66,27 @@ actions that can be composed, many of the problems associated with
 introductory calculus can be attacked.
 
 
-These notes are presented in pages covering a fairly focused concept,
-in a spirit similar to a section of a book. Just like a book, there
-are try-it-yourself questions at the end of each page. All have a
-limited number of self-graded answers. These notes borrow ideas from
-many sources, for example @Strang, @Knill, @Schey, @Thomas,
-@RogawskiAdams, several Wikipedia pages, and other sources.
-
-These notes are accompanied by a `Julia` package `CalculusWithJulia`
+These notes are accompanied by a `Julia` package [`CalculusWithJulia`](https://github.com/jverzani/CalculusWithJulia.jl)
 that provides some simple functions to streamline some common tasks
 and loads some useful packages that will be used repeatedly.
 
-These notes are presented as a Quarto book. To learn more about Quarto
-books visit <https://quarto.org/docs/books>.
+----
 
-Compiling these notes into a `pdf` file with Quarto is possible with some piecing together of parts. The result is less than optimal and also quite large.
+The [online book](https://calculuswithjulia.github.io/) is compiled using the excellent [Quarto](https://quarto.org/) publishing system. Quarto does not support both [typst](https://typst.app/) and the book format, so this pdf file is pieced together section by section. This is useful, but less than optimal:
 
-[Download pdf version](https://www.dropbox.com/scl/fi/vv8ee9a5xb9qbsw87f3bl/CalculusWithJulia.pdf?rlkey=u7ambk19sowelxtgiaosjozzo&st=i0hxwx29&dl=0)
-
-<!--
-These notes may be compiled into a `pdf` file through Quarto. As the result is rather large, we do not provide that file for download. For the interested reader, downloading the repository, instantiating the environment, and running `quarto` to render to `pdf` in the `quarto` subdirectory should produce that file (after some time).
--->
-
-To *contribute* -- say by suggesting additional topics, correcting a
-mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors). Thanks to all contributors and a *very* special thanks to `@fangliu-tju` for their careful and most-appreciated proofreading.
-
-## Running Julia
-
-`Julia` is installed quite easily with the `juliaup` utility. There are some brief installation notes in the overview of `Julia` commands. To run `Julia` through the web (though in a resource-constrained manner), these links resolve to `binder.org` instances:
-
-
-* [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/jverzani/CalculusWithJuliaBinder.jl/main?labpath=blank-notebook.ipynb) (Image without SymPy)
-
-
-* [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/jverzani/CalculusWithJuliaBinder.jl/sympy?labpath=blank-notebook.ipynb) (Image with SymPy, longer to load)
-
+* there is no table of contents
+* there is no index of sections, rather search must be utilized to navigate
+* in HTML, the questions are interactive and self-grading; with the pdf they are rendered in plain text, with some residual formatting. Also the questions in the pdf have *really* long section numbers.
+* there is little attention paid to page layout, as HTML is the preferred presentation format.
 
 
 ----
 
-Calculus with Julia version {{< meta version >}}, produced on {{< meta date >}}.
+```{julia}
+#| echo: false
+using YAML, Dates, Markdown
+cfg = YAML.load_file("_quarto.yml")
+version = VersionNumber(cfg["version"])
+yr=Dates.year(now())
+Markdown.parse("[CalculusWithJulia](https://calculuswithjulia.github.io/) version $version; Copyright 2022-$yr, John Verzani")
+```
