--- a/quarto/alternatives/SciML.qmd
+++ b/quarto/alternatives/SciML.qmd
@@ -304,11 +304,11 @@ x0 = [4.0]
 prob = OptimizationProblem(F, x0)
 ```
 
-The problem is solved through the common interface with a specified method, in this case `Newton`:
+The problem is solved through the common interface with a specified method, in this case `NelderMead`:
 
 
 ```{julia}
-soln = solve(prob, Newton())
+soln = solve(prob, NelderMead())
 ```
 
 :::{.callout-note}
