--- a/quarto/limits/intermediate_value_theorem.qmd
+++ b/quarto/limits/intermediate_value_theorem.qmd
@@ -324,6 +324,26 @@ find_zero(x^3 - x + 1, (-2,  -1))
 
 ##### Example
 
+Solve for a value of $x$ where `erfc(x)` is equal to `0.5`.
+
+This is of the form $f(x) = c$ where $c$ is non-zero. To make this something equal to $0$, we re express as $f(x) - c = 0$. Our function to pass to `find_zero` is then `h(x) = f(x) - c`.
+
+```{julia}
+f(x) = erfc(x)
+c = 0.5
+h(x) = f(x) - c   # or just define f(x) = erfc(x) - 0.5
+```
+
+Now the `erfc` function is always defined and decreasing from $2$ to $0$, so will cross $c = 0.5$ once. We can take a wide interval to solve this, as there is only one zero:
+
+```{julia}
+find_zero(h, (-Inf, Inf))  # as wide as possible in this case
+```
+
+
+
+##### Example
+
 
 The equation $\cos(x) = x$ has just one solution, as can be seen in this plot:
 
@@ -349,15 +369,17 @@ find_zero(h, (0, 2))
 ::: {.callout-note}
 ### Solving `f(x) = g(x)` and `f(x) = c`
 
-The above shows a means to translate a given problem into one that can be solved with `find_zero`. Basically to solve either when a function is a non-zero constant or when a function is equal to some other function, the difference between the two sides is formed and turned into a function, called `h` above.
+The above examples show a means to translate a given problem into one that can be solved with `find_zero`. Basically to solve either when a function is a non-zero constant (`f(x) = c`) or when a function is equal to some other function (`f(x) = g(x)`), the difference between the two sides is formed and turned into a function, called `h` above.
 
-If using symbolic expressions, as below, then an equation (formed by `~`) can be passed to `find_zero`:
+For symbolic expressions, as below, then, as a convenience, an equation (formed by `~`) can be passed to `find_zero`:
 
 ```{julia}
 @syms x
 solve(cos(x) ~ x, (0, 2))
 ```
 :::
+
+[![Intersection of two curves as illustrated by Canadian artist Kapwani Kiwanga.](figures/intersection-biennale.jpg)](https://www.gallery.ca/whats-on/touring-exhibitions-and-loans/around-the-world/canada-pavilion-at-the-venice-biennale/kapwani-kiwanga-trinket)
 
 ##### Example: Inverse functions
 
@@ -710,7 +732,7 @@ This chart of the [Hardrock 100](http://hardrock100.com/) illustrates the two co
 ```{julia}
 #| echo: false
 ###{{{hardrock_profile}}}
-imgfile = "figures/hardrock-100.png"
+imgfile = "figures/hardrock-100.jpeg"
 caption = """
 Elevation profile of the  Hardrock 100 ultramarathon. Treating the elevation profile as a function, the absolute maximum is just about 14,000 feet and the absolute minimum about 7600 feet. These are of interest to the runner for different reasons. Also of interest would be each local maxima and local minima - the peaks and valleys of the graph - and the total elevation climbed - the latter so important/unforgettable its value makes it into the chart's title.
 """
@@ -720,7 +742,7 @@ nothing
 ```
 
 [![Elevation profile of the  Hardrock 100 ultramarathon. Treating the elevation profile as a function, the absolute maximum is just about 14,000 feet and the absolute minimum about 7600 feet. These are of interest to the runner for different reasons. Also of interest would be each local maxima and local minima - the peaks and valleys of the graph - and the total elevation climbed - the latter so important/unforgettable its value makes it into the chart's title.
-](figures/hardrock-100.png)](https://hardrock100.com)
+](limits/figures/hardrock-100.jpeg)](https://hardrock100.com)
 
 The extreme value theorem discusses an assumption that ensures absolute maximum and absolute minimum values exist.
 
@@ -991,7 +1013,7 @@ nothing
 ```
 
 ![Trajectories of potential cannonball fires with air-resistance included. (http://ej.iop.org/images/0143-0807/33/1/149/Full/ejp405251f1_online.jpg)
-](./figures/cannonball.jpg)
+](figures/cannonball.jpg)
 
 In 1638, according to Amir D. [Aczel](http://books.google.com/books?id=kvGt2OlUnQ4C&pg=PA28&lpg=PA28&dq=mersenne+cannon+ball+tests&source=bl&ots=wEUd7e0jFk&sig=LpFuPoUvODzJdaoug4CJsIGZZHw&hl=en&sa=X&ei=KUGcU6OAKJCfyASnioCoBA&ved=0CCEQ6AEwAA#v=onepage&q=mersenne%20cannon%20ball%20tests&f=false), an experiment was performed in the French Countryside. A monk, Marin Mersenne, launched a cannonball straight up into the air in an attempt to help Descartes prove facts about the rotation of the earth. Though the experiment was not successful, Mersenne later observed that the time for the cannonball to go up was greater than the time to come down. ["Vertical Projection in a Resisting Medium: Reflections on Observations of Mersenne".](http://www.maa.org/publications/periodicals/american-mathematical-monthly/american-mathematical-monthly-contents-junejuly-2014)
 
