--- a/quarto/precalc/functions.qmd
+++ b/quarto/precalc/functions.qmd
@@ -1289,11 +1289,11 @@ import IntervalArithmetic
 ```
 
 ```{julia}
-I1 = IntervalArithmetic.Interval(-Inf, Inf)
+I1 = IntervalArithmetic.interval(-Inf, Inf)
 ```
 
 ```{julia}
-I2 = IntervalArithmetic.Interval(0, Inf)
+I2 = IntervalArithmetic.interval(0, Inf)
 ```
 
 The main feature of the package is not to construct intervals, but rather to *rigorously* bound with an interval the output of the image of a closed interval under a function. That is, for a function $f$ and *closed* interval $[a,b]$, a bound for the set $\{f(x) \text{ for } x \text{ in } [a,b]\}$. When `[a,b]` is the domain of $f$, then this is a bound for the range of $f$.
@@ -1303,7 +1303,7 @@ For example the function $f(x) = x^2 + 2$ had a domain of all real $x$, the rang
 
 
 ```{julia}
-ab = IntervalArithmetic.Interval(-Inf, Inf)
+ab = IntervalArithmetic.interval(-Inf, Inf)
 u(x) = x^2 + 2
 u(ab)
 ```
@@ -1344,7 +1344,7 @@ Now consider the evaluation
 ```{julia}
 #| hold: true
 f(x) = x^x
-I = IntervalArithmetic.Interval(0, Inf)
+I = IntervalArithmetic.interval(0, Inf)
 f(I)
 ```
 
