--- a/quarto/precalc/logical_expressions.qmd
+++ b/quarto/precalc/logical_expressions.qmd
@@ -182,11 +182,13 @@ Finally, let's investigate the fact that the harmonic mean, $2/(1/a + 1/b)$ is l
 
 ```{julia}
 #| hold: true
-a, b = rand(2)
-h = 2 / (1/a + 1/b)
-g = (a * b) ^ (1 / 2)
-q = sqrt((a^2 + b^2) / 2)
-h <= g, g <= q
+let
+    a, b = rand(2)
+    h = 2 / (1/a + 1/b)
+    g = (a * b) ^ (1 / 2)
+    q = sqrt((a^2 + b^2) / 2)
+    h <= g, g <= q
+end
 ```
 
 ## Chaining, combining expressions: absolute values
