--- a/quarto/precalc/polynomial_roots.qmd
+++ b/quarto/precalc/polynomial_roots.qmd
@@ -381,8 +381,8 @@ For a polynomial with symbolic coefficients, the difference between the symbol a
 #| hold: true
 @syms a b c
 p = a*x^2 + b*x + c
-q = sympy.Poly(p, x)  # identify `x` as indeterminate; alternatively p.as_poly(x)
-roots(q)
+q1 = sympy.Poly(p, x)  # identify `x` as indeterminate; alternatively p.as_poly(x)
+roots(q1)
 ```
 
 :::{.callout-note}
