--- a/quarto/derivatives/condition.qmd
+++ b/quarto/derivatives/condition.qmd
@@ -15,7 +15,7 @@ The *forward error* is $||f(x+\delta_x) - f(x)||$, the *relative forward error* 
 
 The *backward error* is $||\delta_x||$, the *relative backward error* is $||\delta_x|| / ||x||$.
 
- The *absolute condition number* $\hat{\kappa}$ is worst case of this ratio $||\delta_f||/ ||\delta_x||$ as the pertubation size shrinks to $0$.
+ The *absolute condition number* $\hat{\kappa}$ is worst case of this ratio $||\delta_f||/ ||\delta_x||$ as the perturbation size shrinks to $0$.
 The relative condition number $\kappa$ divides $||\delta_f||$ by $||f(x)||$ and $||\delta_x||$ by $||x||$ before taking the ratio.
 
 
