--- a/quarto/misc/julia_interfaces.qmd
+++ b/quarto/misc/julia_interfaces.qmd
@@ -114,7 +114,7 @@ The notebook interface has "cells" where one or more commands can be entered.
 In `IJulia`, a block of commands is sent to the kernel (the `Julia` interpreter) by typing "shift+return" or clicking on a "run" button. The output is printed below a cell, including graphics.
 
 
-When a cell is evaluating, the leading `[]` has an asterick (`[*]`) showing the notebook is awaiting the results of the calculation.
+When a cell is evaluating, the leading `[]` has an asterisk (`[*]`) showing the notebook is awaiting the results of the calculation.
 
 
 Once a cell is evaluated, the leading `[]` has a number inserted (e.g., `[1]`, as in the figure). This number indicates the order of cell evaluation. Once a notebook is interacted with, the state of the namespace need not reflect the top-to-bottom order of the notebook, but rather reflects the order of cell evaluations.
